Fix cart items stylistic issue

--- a/assetsSource/css/layout/Cart/Cart.0000.pcss
+++ b/assetsSource/css/layout/Cart/Cart.0000.pcss
@@ -37,10 +37,12 @@
 }
 
 .Cart__ItemTitle {
+    color: var(--baseColor);
     font-family: var(--AltFont);
     font-size: 20px;
     font-weight: var(--AltFontBoldWeight);
     padding-right: 10px;
+    text-decoration: none;
     width: calc(100% - 100px);
 }
 
