--- a/templates/_core/Cart.twig
+++ b/templates/_core/Cart.twig
@@ -122,14 +122,16 @@
                                 Expiration
                                 <span class="CheckoutForm__LabelGroupWrapper CheckoutForm__LabelGroupWrapper--Dual">
                                     <select class="select CheckoutForm__Select" required>
-                                        <option value="" disabled selected>Select Month</option>
-                                        <option value="0">April</option>
-                                        <option value="OTHER">Other</option>
+                                        <option value="" disabled selected>Select Month...</option>
+                                        {% for month in months() %}
+                                            <option value="{{ month.numeric }}">{{ month.name }}</option>
+                                        {% endfor %}
                                     </select>
                                     <select class="select CheckoutForm__Select" required>
-                                        <option value="" disabled selected>Select Year</option>
-                                        <option value="2018">2018</option>
-                                        <option value="OTHER">Other</option>
+                                        <option value="" disabled selected>Select Year...</option>
+                                        {% for year in years() %}
+                                            <option value="{{ year }}">{{ year }}</option>
+                                        {% endfor %}
                                     </select>
                                 </span>
                             </label>
