Modify two column view divider

--- a/assetsSource/css/layout/LayoutTwoColumns/LayoutTwoColumns.0800.pcss
+++ b/assetsSource/css/layout/LayoutTwoColumns/LayoutTwoColumns.0800.pcss
@@ -13,11 +13,10 @@
 }
 
 .LayoutTwoColumn__Left:after {
-    bottom: 50%;
-    height: 80%;
+    height: 100%;
     left: auto;
     right: 0;
-    transform: translate(0, 50%);
+    top: 0;
     width: 1px;
 }
 
