Add reset password form markup

--- a/templates/_core/ResetPassword.twig
+++ b/templates/_core/ResetPassword.twig
@@ -1,5 +1,30 @@
 {% extends '_layouts/Master.twig' %}
 
+{% set resetError = craft.app.session.flash('error') ?? '' %}
+{% set resetSuccess = craft.app.session.flash('success') ?? '' %}
+
 {% block content %}
-    Reset Password Template
+    <form method="post" accept-charset="UTF-8" class="MiniForm">
+        {% if resetError is not empty or resetSuccess is not empty %}
+            {% embed '_embeds/Note.twig' with {
+                isError: resetError is not empty,
+            } %}
+                {% block noteTitle %}{% if resetError is not empty %}An error occurred{% else %}Success!{% endif %}{% endblock %}
+                {% block noteContent %}{% if resetError is not empty %}{{ resetError|typeset }}{% else %}{{ resetSuccess|typeset }}{% endif %}{% endblock %}
+            {% endembed %}
+        {% endif %}
+        {{ csrfInput() }}
+        <input type="hidden" name="action" value="users/send-password-reset-email">
+        <label class="label MiniForm__Label MiniForm__Label--Required">
+            Email Address
+            <input
+                type="email"
+                name="loginName"
+                class="input MiniForm__Input"
+                placeholder="bill@smith.com"
+                required
+            >
+        </label>
+        <input class="button MiniForm__ButtonSubmit" type="submit" value="Send Password Reset Email">
+    </form>
 {% endblock %}
