Update error and success reporting on the iforgot page

--- a/templates/_core/ResetPassword.twig
+++ b/templates/_core/ResetPassword.twig
@@ -1,7 +1,14 @@
+{# @var \craft\web\twig\variables\CraftVariable craft #}
+
 {% extends '_layouts/Master.twig' %}
 
-{% set resetError = craft.app.session.flash('error') ?? '' %}
-{% set resetSuccess = craft.app.session.flash('success') ?? '' %}
+{% set resetError = '' %}
+{% set errors = errors|default('') %}
+{% set resetSuccess = craft.app.session.flash('notice') ?? '' %}
+
+{% if errors %}
+    {% set resetError = errors|join(' ') %}
+{% endif %}
 
 {% block content %}
     <form method="post" accept-charset="UTF-8" class="MiniForm">
