Add set password template

--- a/templates/_core/ResetPassword.twig
+++ b/templates/_core/ResetPassword.twig
@@ -6,6 +6,10 @@
 {% set errors = errors|default('') %}
 {% set resetSuccess = craft.app.session.flash('notice') ?? '' %}
 
+{% if resetSuccess != 'Password reset email sent.' %}
+    {% set resetSuccess = '' %}
+{% endif %}
+
 {% if errors %}
     {% set resetError = errors|join(' ') %}
 {% endif %}
