--- a/templates/_layouts/HtmlWrapper.twig
+++ b/templates/_layouts/HtmlWrapper.twig
@@ -97,6 +97,9 @@
     {# Include jQuery #}
     <script async src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
+    {# Include Cleave #}
+    <script async src="https://cdnjs.cloudflare.com/ajax/libs/cleave.js/1.3.3/cleave.min.js"></script>
+
     {# Include minified JS #}
     <script async src="/assets/js/script.min{% if staticAssetCacheTime %}.{{ staticAssetCacheTime }}{% endif %}.js{% if not staticAssetCacheTime %}?v={{ fileTime('/assets/css/script.min.js') }}{% endif %}"></script>
 
